# component-oauth-card

./: Cargo.toml  README.md  component.manifest.json
.codex/: repo_overview.md
ci/: local_check.sh
schemas/: component.schema.json
schemas/io/: input.schema.json  output.schema.json
src/: broker.rs  lib.rs  logic.rs  model.rs
tests/: conformance.rs
