[package]
name = "component-oauth-card"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.89"
description = "Greentic component component-oauth-card"
repository = "https://github.com/component-oauth-card"
authors = ["maarten"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
greentic-types = { version = "0.4" }

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-node"] }
